# llama_omni_server

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  TTS_PIPELINE.md  conanfile.txt  config.example.yaml  index.html
src/: main.cpp  protocol.hpp  server.cpp  server.hpp  session.cpp  session.hpp  wav.cpp  wav.hpp
src/config/: config_loader.cpp  config_loader.hpp
src/pipeline/: audio_encoder.cpp  audio_encoder.hpp  model_manager.cpp  model_manager.hpp  tts_pipeline.cpp  tts_pipeline.hpp  tts_sampling.hpp  vad.hpp  vram_planner.cpp  vram_planner.hpp
test_data/unit/: config_invalid.yaml  config_invalid_port.yaml  config_invalid_sample_rate.yaml  config_minimal.yaml  config_types.yaml  config_valid.yaml
tests/: .clang-tidy
tests/e2e/: test_ws_session.cpp  ws_fixture.hpp
tests/integration/: session_harness.hpp  test_audio_duplex.cpp  test_kv_eviction_integration.cpp  test_session_init.cpp  test_text_inference.cpp  test_text_turn.cpp  test_tts_streaming.cpp  test_video_duplex.cpp
tests/unit/: test_cobalt_race.cpp  test_config_loader.cpp  test_kv_eviction.cpp  test_protocol.cpp  test_tts_sampling.cpp  test_vram_planner.cpp
utils/: gen_prompt_cache.py  generate_test_shapes.cpp  requirements.txt  split_tts_gguf.py
